[gd_scene load_steps=2 format=3 uid="uid://h0nkcsg263jj"]

[ext_resource type="Script" path="res://addons/gd-openai/user_data.gd" id="1_3tabx"]

[node name="user_data" type="Control"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tabx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "OpenAI API key"

[node name="ApiKey" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Copy your API key here"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
